# zeeker-judgements

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  zeeker.toml
.claude/skills/zeeker-source-creator/: SKILL.md
.claude/skills/zeeker-source-creator/references/: api-reference.md  deploy-reference.md  pagination-patterns.md  pdf-reference.md  project-scaffold-reference.md  resource-patterns.md  rss-reference.md  scraping-reference.md  scraping-strategy.md
.github/workflows/: deploy.yml
resources/: __init__.py  extraction.py  extraction_cache.py  judgments.py  summarization.py  summary_cache.py
scripts/: fetch_fixtures.py
tests/: test_extraction.py  test_summarization.py
tests/fixtures/: 2005_2005_sgca_55.html  2005_2005_sghc_238.html  2015_2015_sghc_329.html  2015_2015_sghc_330.html  recent_2026_sgca_19.html  recent_2026_sgdc_136.html  recent_2026_sghc_85.html
