[project]
name = "zeeker-judgements"
version = "0.1.0"
description = "Zeeker database project for zeeker-judgements"
requires-python = ">=3.12"

dependencies = [
    "beautifulsoup4>=4.14.3",
    "click>=8.3.2",
    "httpx>=0.28.1",
    "lxml>=6.0.4",
    "openai>=1.50",
    "tenacity>=9.1.4",
    "zeeker>=0.6.0",
]

# Optional: Add zeeker-common for shared utilities (Jina Reader, OpenAI, etc.)
# dependencies = [
#     "zeeker>=0.6.0",
#     "zeeker-common>=0.1.0",
# ]

[dependency-groups]
dev = ["black>=25.1.0", "ruff>=0.8.0", "pytest>=8.0.0"]

# Add project-specific dependencies here as needed:
# dependencies = [
#     "zeeker>=0.6.0",
#     "zeeker-common>=0.1.0",  # For get_hash_id, get_jina_reader_content, etc.
#     "requests>=2.31.0",      # For HTTP API calls
#     "beautifulsoup4>=4.12.0", # For web scraping and HTML parsing
#     "pandas>=2.0.0",          # For data processing and analysis
#     "lxml>=4.9.0",            # For XML parsing
#     "pdfplumber>=0.10.0",     # For PDF text extraction
#     "openpyxl>=3.1.0",        # For Excel file reading
# ]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # Focus on essential errors, warnings, and imports
ignore = ["E501"]  # Line too long (handled by black)
